Revise Garmin Health Data metrics description
Updated subtitle and description for Garmin Health Data section.

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     <div class="slide" id="slide5">
         <div class="slide-number">05</div>
         <h2>Garmin Health Data</h2>
-        <p class="subtitle">36 physiological metrics from wearables</p>
+        <p class="subtitle">5 physiological metrics</p>
         <div style="margin-top: 40px;">
             <span class="metric-badge">Heart Rate</span>
             <span class="metric-badge">Stress</span>
@@ -465,7 +465,7 @@
             <span class="metric-badge">Sleep</span>
             <span class="metric-badge">Step Count</span>
         </div>
-        <p class="description" style="margin-top: 40px;">Irregular sampling frequencies require normalization to minute boundaries</p>        <p class="subtitle">Placeholder for new content</p>
+            <p class="description" style="margin-top: 40px;">Provides high-resolution recovery metrics (Body Battery) and HRV-based stress monitoring to complement the dataset.</p>    
     </div>
 
     <div class="slide" id="slide6">
