Replace 'Respiratory Rate' with 'Body Battery'

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         <div style="margin-top: 40px;">
             <span class="metric-badge">Heart Rate</span>
             <span class="metric-badge">Stress</span>
-            <span class="metric-badge">Respiratory Rate</span>
+            <span class="metric-badge">Body Battery</span>
             <span class="metric-badge">Sleep</span>
             <span class="metric-badge">Step Count</span>
         </div>
